--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
     "up": "drizzle-kit up:pg"
   },
   "dependencies": {
+    "@blocknote/core": "^0.13.4",
+    "@blocknote/mantine": "^0.13.4",
+    "@blocknote/react": "^0.13.4",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
+    "@liveblocks/client": "^1.12.0",
+    "@liveblocks/node": "^1.12.0",
+    "@liveblocks/react": "^1.12.0",
+    "@liveblocks/yjs": "^1.12.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -47,6 +54,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.0.2",
+    "yjs": "^13.6.15",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
